# homework

./: .gitignore
dl/hw1/: pytorch_lightning_classification.ipynb
llm/hw1/: agnews.ipynb
mlops/hw1/: .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
mlops/hw1/.dvc/: config
mlops/hw1/src/: evaluate.py  validate_model.py
